--- a/user-console/vllm/vllm-smls/configs/v0_2_1.yaml
+++ b/user-console/vllm/vllm-smls/configs/v0_2_1.yaml
@@ -1,15 +1,3 @@
-## @param image.registry Repository registry for the Docker image
-## @param image.repository Repository name for the Docker image
-## @param image.tag Image tag for the Docker image (immutable tags are recommended)
-## @param image.pullPolicy Image pull policy for the Docker image
-##
-image:
-  registry: docker.io
-  repository: t9kpublic/vllm-openai
-  # Overrides the image tag whose default is the chart appVersion.
-  tag: "v0.6.1.post2"
-  pullPolicy: IfNotPresent
-
 ## @param resources.limits.cpu CPU limit for Kubernetes resources
 ## @param resources.limits.memory Memory limit for Kubernetes resources
 ## @param resources.limits."nvidia.com/gpu" NVIDIA GPU limit for Kubernetes resources
@@ -20,7 +8,33 @@ resources:
     memory: 64Gi
     nvidia.com/gpu: 1
 
-## @param model.deployName Name by which the model is deployed
+## @param server.image.registry Repository registry for the Docker image
+## @param server.image.repository Repository name for the Docker image
+## @param server.image.tag Image tag for the Docker image (immutable tags are recommended)
+##
+server:
+  image:
+    registry: "$(T9K_APP_IMAGE_REGISTRY)"
+    repository: "$(T9K_APP_IMAGE_NAMESPACE)/vllm-openai"
+    # Overrides the image tag whose default is the chart appVersion.
+    tag: "v0.6.1.post2"
+
+## @param kubectl.image.registry Repository registry for the Docker image
+## @param kubectl.image.repository Repository name for the Docker image
+## @param kubectl.image.tag Image tag for the Docker image (immutable tags are recommended)
+##
+kubectl:
+  image:
+    registry: "$(T9K_APP_IMAGE_REGISTRY)"
+    repository: "$(T9K_APP_IMAGE_NAMESPACE)/kubectl"
+    # Overrides the image tag whose default is the chart appVersion.
+    tag: "1.27"
+
+## @param imagePullPolicy Image pull policy for the Docker image
+##
+imagePullPolicy: IfNotPresent
+
+## @param model.name Name by which the model is deployed
 ## @param model.volume.storageClass Storage class for the model volume
 ## @param model.volume.size Size of the model volume
 ## @param model.volume.accessModes Access modes for the model volume
