--- a/user-console/vllm/vllm-smls-llama3/configs/v0_2_1.yaml
+++ b/user-console/vllm/vllm-smls-llama3/configs/v0_2_1.yaml
@@ -1,28 +1,3 @@
-## @param replicaCount Number of replicas for the deployment
-##
-replicaCount: 1
-
-## @param image.registry Repository registry for the Docker image
-## @param image.repository Repository name for the Docker image
-## @param image.tag Image tag for the Docker image (immutable tags are recommended)
-## @param image.pullPolicy Image pull policy for the Docker image
-##
-server:
-  image:
-    registry: docker.io
-    repository: t9kpublic/vllm-openai
-    # Overrides the image tag whose default is the chart appVersion.
-    tag: "v0.5.4"
-
-busybox:
-  image:
-    registry: docker.io
-    repository: t9kpublic/busybox
-    # Overrides the image tag whose default is the chart appVersion.
-    tag: "20240913"
-
-imagePullPolicy: IfNotPresent
-
 ## @param resources.limits.cpu CPU limit for Kubernetes resources
 ## @param resources.limits.memory Memory limit for Kubernetes resources
 ## @param resources.limits."nvidia.com/gpu" NVIDIA GPU limit for Kubernetes resources
@@ -32,6 +7,17 @@ resources:
     cpu: 4
     memory: 64Gi
     nvidia.com/gpu: 1
+
+## @param server.image.registry Repository registry for the Docker image
+## @param server.image.repository Repository name for the Docker image
+## @param server.image.tag Image tag for the Docker image (immutable tags are recommended)
+##
+server:
+  image:
+    registry: "$(T9K_APP_IMAGE_REGISTRY)"
+    repository: "$(T9K_APP_IMAGE_NAMESPACE)/vllm-openai"
+    # Overrides the image tag whose default is the chart appVersion.
+    tag: "v0.5.4"
 
 ## @param model.deployName Name by which the model is deployed
 ## @param model.existingClaim PVC containing the model files
