--- a/user-console/argo-workflows/app/chart/templates/argo-server.deploy.yaml
+++ b/user-console/argo-workflows/app/chart/templates/argo-server.deploy.yaml
@@ -22,6 +22,13 @@ spec:
         - --basehref=/apps/{{ .Release.Namespace }}/argo-workflows/{{ .Release.Name }}/
         env: []
         image: {{ .Values.server.image }}
+        resources:
+          limits:
+            cpu: 500m
+            memory: 500Mi
+          requests:
+            cpu: 10m
+            memory: 150Mi
         name: argo-server
         ports:
         - containerPort: 2746
