--- a/user-console/argo-workflows/api/chart/templates/workflow-controller.deploy.yaml
+++ b/user-console/argo-workflows/api/chart/templates/workflow-controller.deploy.yaml
@@ -61,6 +61,22 @@ data:
   workflowDefaults: |
     spec:
       serviceAccountName: managed-project-sa
+  executor: |
+    resources:
+      requests:
+        cpu: 0.1
+        memory: 64Mi
+      limits:
+        cpu: 0.5
+        memory: 512Mi
+  mainContainer: |
+    resources:
+      requests:
+        cpu: 0.1
+        memory: 64Mi
+      limits:
+        cpu: 0.5
+        memory: 512Mi
 ---
 apiVersion: scheduling.k8s.io/v1
 kind: PriorityClass
