Fix app code-server

--- a/user-console/code-server/chart/templates/deployment.yaml
+++ b/user-console/code-server/chart/templates/deployment.yaml
@@ -44,11 +44,15 @@ spec:
               path: /healthz
               port: http
             initialDelaySeconds: 10
+            periodSeconds: 10
+            failureThreshold: 5
           readinessProbe:
             httpGet:
               path: /healthz
               port: http
             initialDelaySeconds: 10
+            periodSeconds: 10
+            failureThreshold: 5
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
           volumeMounts:
