--- a/user-console/vllm/vllm/configs/v0_2_2.yaml
+++ b/user-console/vllm/vllm/configs/v0_2_2.yaml
@@ -1,32 +1,23 @@
-## @param replicaCount Number of replicas for the deployment
+## @param image.server.registry Repository registry for the server image
+## @param image.server.repository Repository name for the server image
+## @param image.server.tag Image tag for the server image (immutable tags are recommended)
+## @param image.initializer.registry Repository registry for the initializer image
+## @param image.initializer.repository Repository name for the initializer image
+## @param image.initializer.tag Image tag for the initializer image (immutable tags are recommended)
 ##
-replicaCount: 1
-
-## @param server.image.registry Repository registry for the Docker image
-## @param server.image.repository Repository name for the Docker image
-## @param server.image.tag Image tag for the Docker image (immutable tags are recommended)
-##
-server:
-  image:
-    registry: docker.io
-    repository: t9kpublic/vllm-openai
+image:
+  # 推理服务器镜像
+  server:
+    registry: "$(T9K_APP_IMAGE_REGISTRY)"
+    repository: "$(T9K_APP_IMAGE_NAMESPACE)/vllm-openai"
     # Overrides the image tag whose default is the chart appVersion.
-    tag: "v0.5.4"
+    tag: "v0.6.3"
 
-## @param kubectl.image.registry Repository registry for the Docker image
-## @param kubectl.image.repository Repository name for the Docker image
-## @param kubectl.image.tag Image tag for the Docker image (immutable tags are recommended)
-##
-kubectl:
-  image:
-    registry: docker.io
-    repository: t9kpublic/kubectl
-    # Overrides the image tag whose default is the chart appVersion.
+  # 初始化器镜像，请勿修改
+  initializer:
+    registry: "$(T9K_APP_IMAGE_REGISTRY)"
+    repository: "$(T9K_APP_IMAGE_NAMESPACE)/kubectl"
     tag: "1.27"
-
-## @param imagePullPolicy Image pull policy for the Docker image
-##
-imagePullPolicy: IfNotPresent
 
 ## @param resources.limits.cpu CPU limit for Kubernetes resources
 ## @param resources.limits.memory Memory limit for Kubernetes resources
@@ -38,7 +29,7 @@ resources:
     memory: 64Gi
     nvidia.com/gpu: 1
 
-## @param model.deployName Name by which the model is deployed
+## @param model.name Name by which the model is deployed
 ## @param model.volume.storageClass Storage class for the model volume
 ## @param model.volume.size Size of the model volume
 ## @param model.volume.accessModes Access modes for the model volume
@@ -88,6 +79,19 @@ model:
     url: ""
     # 引用 s3-env 类型的 Secret 的键值
     existingSecret: ""
+
+## @param autoScaling.minReplicas Minimum number of replicas for autoscaling
+## @param autoScaling.maxReplicas Maximum number of replicas for autoscaling
+## @param autoScaling.annotations Annotations for Knative Service autoscalin
+##
+autoScaling:
+  minReplicas: 1
+  maxReplicas: 1
+
+  # 为 Knative Service 设置的注解，参考 https://knative.dev/docs/serving/autoscaling/autoscaling-metrics/
+  annotations: {}
+    # autoscaling.knative.dev/metric: "concurrency"
+    # autoscaling.knative.dev/target-utilization-percentage: "70" 
 
 ## @param app.extraArgs Extra arguments for the vLLM engine
 ##
