--- a/user-console/vllm/vllm/docker/Dockerfile
+++ b/user-console/vllm/vllm/docker/Dockerfile
@@ -1,4 +1,4 @@
-FROM vllm/vllm-openai:v0.6.1.post2
+FROM vllm/vllm-openai:v0.6.3
 
 RUN pip install --no-cache-dir --upgrade pip && \
   pip install --no-cache-dir --default-timeout=100 bitsandbytes>=0.42.0
