--- a/user-console/stable-diffusion-webui-aki/chart/templates/deployment.yaml
+++ b/user-console/stable-diffusion-webui-aki/chart/templates/deployment.yaml
@@ -47,11 +47,15 @@ spec:
               path: /
               port: http
             initialDelaySeconds: 30
+            periodSeconds: 15
+            failureThreshold: 5
           readinessProbe:
             httpGet:
               path: /
               port: http
             initialDelaySeconds: 30
+            periodSeconds: 15
+            failureThreshold: 5
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
           volumeMounts:
