--- a/user-console/vllm/vllm/variations/template-metax.yaml
+++ b/user-console/vllm/vllm/variations/template-metax.yaml
@@ -2,18 +2,18 @@ apiVersion: app.tensorstack.dev/v1beta1
 kind: Template
 metadata:
   name: vllm-metax
-  displayName: vLLM (MetaX)
+  displayName: vLLM (MetaX GPU)
   categories: ["AI"]
   description: "vLLM 是一个高吞吐量和内存高效的 LLM 推理和服务引擎。"
   icon: "file://$APP_DIR/icon.png"
 template:
   helm:
-    repo: "oci://docker.io/t9kpublic"
+    repo: "oci://registry.suanfeng.t9kcloud.cn/t9kcharts"
     # repo: "https://t9k.github.io/apps/"
     chart: "vllm"
     versions:
-    - version: 0.2.3
-      config: "file://$APP_DIR/configs/v0_2_3-metax.yaml"
+    - version: 0.3.0
+      config: "file://$APP_DIR/configs/v0_3_0-metax.yaml"
       urls: []
       readinessProbe:
         resources:
