--- a/user-console/vllm/vllm/variations/template-metax.yaml
+++ b/user-console/vllm/vllm/variations/template-metax.yaml
@@ -1,19 +1,19 @@
 apiVersion: app.tensorstack.dev/v1beta1
 kind: Template
 metadata:
-  name: vllm
-  displayName: vLLM
+  name: vllm-metax
+  displayName: vLLM (MetaX GPU)
   categories: ["AI"]
   description: "vLLM 是一个高吞吐量和内存高效的 LLM 推理和服务引擎。"
   icon: "file://$APP_DIR/icon.png"
 template:
   helm:
-    repo: "oci://docker.io/t9kpublic"
+    repo: "oci://registry.suanfeng.t9kcloud.cn/t9kcharts"
     # repo: "https://t9k.github.io/apps/"
     chart: "vllm"
     versions:
     - version: 0.3.0
-      config: "file://$APP_DIR/configs/v0_3_0.yaml"
+      config: "file://$APP_DIR/configs/v0_3_0-metax.yaml"
       urls: []
       readinessProbe:
         resources:
