--- a/user-console/fastgpt/chart/templates/deployment.yaml
+++ b/user-console/fastgpt/chart/templates/deployment.yaml
@@ -31,9 +31,9 @@ spec:
             - name: DB_MAX_LINK
               value: {{ .Values.app.dbMaxLink | quote }}
             - name: SANDBOX_URL
-              value: {{ .Values.app.sandboxUrl }}
+              value: "http://{{ .Release.Name }}-sandbox.{{ .Release.Namespace }}.svc.cluster.local:{{ .Values.sandbox.service.port }}"
             - name: FE_DOMAIN
-              value: {{ .Values.app.feDomain }}
+              value: "http://localhost:3000"
             - name: LOG_LEVEL
               value: {{ .Values.app.logLevel }}
             - name: STORE_LOG_LEVEL
