--- a/user-console/comfyui/docker/Dockerfile
+++ b/user-console/comfyui/docker/Dockerfile
@@ -1,12 +1,9 @@
-FROM yanwk/comfyui-boot:latest
+FROM yanwk/comfyui-boot:cu124-cn-20241111
 
-USER root
-RUN chmod +x /home/scripts/download.sh && \
-  bash /home/scripts/download.sh && \
-  mkdir /home/runner_backup && \
-  mv /home/runner/* /home/runner_backup && \
-  chown -R 1000:1000 /home/runner && \
-  chown -R 1000:1000 /home/runner_backup
-USER runner
+COPY download.sh /runner-scripts/download.sh
+COPY entrypoint.sh /runner-scripts/entrypoint.sh
 
-COPY entrypoint.sh /home/scripts/entrypoint.sh
+RUN cd /root && \
+  chmod +x /runner-scripts/download.sh && \
+  bash /runner-scripts/download.sh && \
+  mv /root/{.,}* /home
