--- a/user-console/vllm/vllm/chart/values.yaml
+++ b/user-console/vllm/vllm/chart/values.yaml
@@ -2,7 +2,7 @@ server:
   image:
     registry: "$(T9K_APP_IMAGE_REGISTRY)"
     repository: "$(T9K_APP_IMAGE_NAMESPACE)/vllm-openai"
-    tag: "v0.6.3"
+    tag: ""
     pullPolicy: IfNotPresent
 
   resources:
